--- a/01-variables-&-branches/index.html
+++ b/01-variables-&-branches/index.html
@@ -6,17 +6,54 @@
     <title>Переменные, типы и ветвления</title>
   </head>
   <body>
-    <!-- <script src="/JavaScript/vars.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/input.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/numbers.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/numbers.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/strings.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/comparison-operators.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/06 logical-operators.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/06-1-segment.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/06-2-chat.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/06-3-subscription.js" type="module"></script> -->
-    <!-- <script src="/JavaScript/07-1-purchase.js" type="module"></script> -->
-    <script src="/JavaScript/07-2-discount.js" type="module"></script>
+    <script src="/01-variables-&-branches/js/01-vars.js" type="module"></script>
+
+    <!-- <script
+      src="/01-variables-&-branches/js/02-numbers.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/03-strings.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/04-input.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/05-comparison-operators.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/06-logical-operators.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/06-1-segment.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/06-2-chat.js"
+      type="module"
+    ></script> -->
+    <!-- <script
+      src="/01-variables-&-branches/js/06-3-subscription.js"
+      type="module"
+    ></script> -->
+
+    <!-- <script
+      src="/01-variables-&-branches/js/07-branching.js"
+      type="module"
+    ></script> -->
+
+    <!-- <script
+      src="/01-variables-&-branches/js/07-1-purchase.js"
+      type="module"
+    ></script> -->
+    <!-- 
+    <script
+      src="/01-variables-&-branches/js/07-2-discount.js"
+      type="module"
+    ></script> -->
   </body>
 </html>
