--- a/01-variables-&-branches/index.html
+++ b/01-variables-&-branches/index.html
@@ -8,52 +8,52 @@
   <body>
     <script src="/01-variables-&-branches/js/01-vars.js" type="module"></script>
 
-    <!-- <script
+    <script
       src="/01-variables-&-branches/js/02-numbers.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/03-strings.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/04-input.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/05-comparison-operators.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/06-logical-operators.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/06-1-segment.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/06-2-chat.js"
       type="module"
-    ></script> -->
-    <!-- <script
+    ></script>
+    <script
       src="/01-variables-&-branches/js/06-3-subscription.js"
       type="module"
-    ></script> -->
+    ></script>
 
-    <!-- <script
+    <script
       src="/01-variables-&-branches/js/07-branching.js"
       type="module"
-    ></script> -->
+    ></script>
 
-    <!-- <script
+    <script
       src="/01-variables-&-branches/js/07-1-purchase.js"
       type="module"
-    ></script> -->
-    <!-- 
+    ></script>
+
     <script
       src="/01-variables-&-branches/js/07-2-discount.js"
       type="module"
-    ></script> -->
+    ></script>
   </body>
 </html>
